# async-gTTS

./: README.md  setup.cfg
.github/workflows/: python.yml
asyncgTTS/: __init__.py  _decos.py  asyncgTTS.py  config.py  errors.py  token.py
