[metadata]
name = asyncgTTS
version = attr: asyncgTTS.__version__
description = Async interfaces to the official Google Text to Speech API.
long_description = file: README.md
long_description_content_type = text/markdown
author = regulad
author_email = regulad@outlook.com
url = https://github.com/regulad/asyncgTTS
download_url = https://github.com/regulad/asyncgTTS/archive/refs/heads/master.zip
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = MIT
keywords =
    async
    TTS
    gtts
    text to speech

[options]
packages = asyncgTTS
install_requires =
    aiohttp
    pyJWT[crypto]
